# panel-item

./: Cargo.toml  build.rs
schemas/: panel_item.kdl
src/: dbus.rs  lib.rs  mint_impls.rs  node.rs  panel_item.rs  panel_item_provider.rs  protocol.rs  scenegraph.rs
src/asteroids/: mod.rs  panel_item_acceptor.rs  panel_shell.rs
src/protocol/: acceptor.rs  mod.rs  provider.rs
